ui: 0.7 cleanup (fix dark mode styling, spacing on timeline comp, etc.) (#2893)
* ui: fixed styling on various ui elements

* ui: added icon headers to operation details page

* ui: removed styling that made overview table too big

* ui: added changelog

* ui/workspace-switcher: refine Pds::Dropdown dark mode hacks

--- a/ui/app/styles/components/navigation/artifact-overview.scss
+++ b/ui/app/styles/components/navigation/artifact-overview.scss
@@ -22,9 +22,8 @@
     th {
       font-weight: normal;
       color: rgb(var(--text-muted));
-      padding-right: scale.$lg--10;
       text-align: left;
-      width: 158px;
+      width: 100px;
     }
 
     .status-indicator {
@@ -40,8 +39,12 @@
       align-items: baseline;
     }
 
-    .image-ref:first-child {
-      margin-top: -1px;
+    .image-ref {
+      display: inline-flex;
+
+      :first-child {
+        margin-top: -1px;
+      }
     }
   }
 }
